--- a/instagram_scraping.ipynb
+++ b/instagram_scraping.ipynb
@@ -22,13 +22,13 @@
    "outputs": [],
    "source": [
     "# Setting up account, password, and download location\n",
-    "username = 'eerayli@mail.ru'  # Replace the dots with your username\n",
+    "username = 'your_instagram_username'  # Replace the dots with your username\n",
     "# ---------------------------\n",
     "# Option 1: Using getpass() to hide the password in the console\n",
     "# password = getpass.getpass()\n",
     "\n",
     "# Option 2: Setting the password as a string\n",
-    "password = 'asdfghjkl!@#$%^&*()'  # Replace the dots with your password\n",
+    "password = 'your_password'  # Replace the dots with your password\n",
     "# ----------------------------------\n",
     "dest_loc = r'C:\\Users\\ASUS\\Desktop\\selenium dersleri\\instagram_scraping_accaunt_images\\instaphotos'  # Setting the directory where the images will be downloaded"
    ]
