--- a/instagram_scraping.ipynb
+++ b/instagram_scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,25 +17,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setting up account, password, and download location\n",
-    "username = 'eerayli@mail.ru'  # Replace the dots with your username\n",
+    "username = 'your_username'  # Replace the dots with your username\n",
     "# ---------------------------\n",
     "# Option 1: Using getpass() to hide the password in the console\n",
     "# password = getpass.getpass()\n",
     "\n",
     "# Option 2: Setting the password as a string\n",
-    "password = 'asdfghjkl!@#$%^&*()'  # Replace the dots with your password\n",
+    "password = 'your_password'  # Replace the dots with your password\n",
     "# ----------------------------------\n",
-    "dest_loc = r'C:\\Users\\ASUS\\Desktop\\selenium dersleri\\instagram_scraping_accaunt_images\\instaphotos'  # Setting the directory where the images will be downloaded"
+    "dest_loc = r'C:\\Users\\ASUS\\Desktop\\instagram_scraping_accaunt_images\\instaphotos'  # Setting the directory where the images will be downloaded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,12 +76,12 @@
     "password_box = driver.find_element(By.XPATH, '//input[@aria-label=\"Password\"]')\n",
     "password_box.send_keys(password)\n",
     "password_box.send_keys(Keys.ENTER)\n",
-    "time.sleep(6)"
+    "time.sleep(8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,12 +124,12 @@
     "search_box = driver.find_element(By.XPATH, '//input[@aria-label=\"Search input\" and @placeholder=\"Search\"]')\n",
     "search_query = input('Enter your search query: ')\n",
     "search_box.send_keys(search_query)\n",
-    "time.sleep(3)\n"
+    "time.sleep(5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
     "    # Variant 1: Checking if the account_images set has reached a sufficient number (1127 in this case, as Messi has posted this many)\n",
     "    number_of_images=driver.find_element(By.XPATH, \"//*[contains(@class,'html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs')]\").text\n",
     "    int_number_of_images=int(number_of_images.replace(',',''))\n",
-    "    if len(account_images) >= 10: # Since indices start from 0, we use 1127, not 1126.\n",
+    "    if len(account_images) >= 100: # Since indices start from 0, we use 1127, not 1126.\n",
     "        break\n",
     "\n",
     "    # # Variant 2: Scrolling until reaching the exact bottom of the page\n",
@@ -171,16 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "108"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
